--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,31 +3,19 @@ layout: default
 ---
 
 <div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  
-  <span class="post-date">{{ page.date | date_to_string }}{% if page.comments %} • <a href="{{ page.url | absolute_url }}#disqus_thread">0 Comments</a>{% endif %}</span>
-
+<p><a href="/index.html">Back to blog</a></p>
+  <h2 class="post-title">{{ page.title }}</h2>
+  <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
-  
-  {% if site.disqus.shortname %}
-  {% include disqus_comments.html %}
-  {% endif %}
-
+<p><a href="/index.html">Back to blog</a></p>
 </div>
 
 
-<div class="related">
-  <h2>Related Posts</h2>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
-      <li>
-        <h3>
-          <a href="{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
-          </a>
-        </h3>
-      </li>
-    {% endfor %}
-  </ul>
+<div class="PageNavigation">
+  {% if page.previous.url %}
+    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+  {% endif %}
+  {% if page.next.url %}
+    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+  {% endif %}
 </div>
