--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,9 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1>
-        <a href="{{ site.baseurl }}">
-          {{ site.title }}
-        </a>
-      </h1>
-      <p class="lead">{{ site.description }}</p>
+      <h2><a class="">FlowersAtDusk</a></h2>
+      <p class="lead">flowersatduskblog[at]gmail.com</p>
+      <img src="/assets/images/flowers.jpg"/>
     </div>
 
     <nav class="sidebar-nav">
