change image name

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
     <div class="sidebar-about">
       <h2><a class="">FlowersAtDusk</a></h2>
       <p class="lead">flowersatduskblog[at]gmail.com</p>
-      <img src="/assets/images/flowers.jpg"/>
+      <img src="/assets/images/flowers.jpeg"/>
     </div>
 
     <nav class="sidebar-nav">
