fix sidebar formatting

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h2><a class="">FlowersAtDusk</a></h2>
-      <p class="lead">flowersatduskblog[at]gmail.com</p>
+      <h6 class="lead">flowersatduskblog[at]gmail.com</h6>
       <img src="/assets/images/flowers.jpeg"/>
     </div>
 
@@ -23,11 +23,8 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
