--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -5,13 +5,13 @@
 <script>
 
 var disqus_config = function () {
-    this.page.url = "{{ page.url | prepend: site.baseurl | prepend: site.url }}";
-    this.page.identifier = "{{ page.id }}"; 
+    this.page.url = '{{ page.url | absolute_url }}';
+    this.page.identifier = '{{ page.url | absolute_url }}';
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
-s.src = 'https://flowersatdusk.disqus.com/embed.js';
+s.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
