--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -5,8 +5,8 @@
 <script>
 
 var disqus_config = function () {
-    this.page.url = '{{ page.url | absolute_url }}';
-    this.page.identifier = '{{ page.url | absolute_url }}';
+    this.page.url = "{{ page.url | prepend: site.baseurl | prepend: site.url }}";
+    this.page.identifier = "{{ page.id }}"; 
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
