--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,10 @@ layout: default
   <h2 class="post-title">{{ page.title }}</h2>
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
+
+ {% if site.disqus.shortname %}
+  {% include disqus_comments.html %}
+{% endif %}
 <p><a href="/index.html">Back to blog</a></p>
 </div>
 
