--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,15 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="theme-base-0d">
 
     {% include sidebar.html %}
 
     <div class="content container">
       {{ content }}
-
-      {% include comments.html %}
     </div>
+
+    <script id="dsq-count-scr" src="//{{ site.disqus.shortname }}.disqus.com/count.js" async></script>
 
   </body>
 </html>
