--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,13 +1,16 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h2><a class="">FlowersAtDusk</a></h2>
-
-      <img src="/assets/images/flowers.jpeg"/>
+      <h3>
+        <a href="{{ site.url }}">
+          {{ site.title }}
+        </a>
+      </h3>
+      <img src="/assets/images/flowers.jpg"/>
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Blog</a>
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.url }}">Home</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
@@ -23,8 +26,8 @@
         {% endif %}
       {% endfor %}
 
-
     </nav>
+
 
   </div>
 </div>
