--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h3>
-        <a href="{{ site.url }}">
-          {{ site.title }}
-        </a>
-      </h3>
-      <img src="/assets/images/flowers.jpg"/>
+      <img src="/assets/images/flowers.jpg"/ width="120" height="128.33">
     </div>
 
     <nav class="sidebar-nav">
