--- a/archive/public/css/hyde.css
+++ b/archive/public/css/hyde.css
@@ -65,7 +65,7 @@ html {
     top: 0;
     left: 0;
     bottom: 0;
-    width: 18rem;
+    width: 10rem;
     text-align: left;
   }
 }
@@ -102,14 +102,14 @@ a.sidebar-nav-item:focus {
 /* Sticky sidebar
  *
  * Add the `sidebar-sticky` class to the sidebar's container to affix it the
- * contents to the bottom of the sidebar in tablets and up.
+ * contents to the top of the sidebar in tablets and up.
  */
 
 @media (min-width: 48em) {
   .sidebar-sticky {
     position: absolute;
     right:  1rem;
-    bottom: 1rem;
+    top: 1rem;
     left:   1rem;
   }
 }
