add subscription form

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,5 +31,8 @@
   {% if jekyll.environment == 'production' %}
   {% include analytics.html %}
   {% endif %}
+
+  <!-- subscription-->
+
   
 </head>
